Source/JavaScriptCore/dfg/DFGSpeculativeJIT64.cpp
@@ -5818,6 +5818,7 @@ void SpeculativeJIT::compile(Node* node)
     case PutStack:
     case KillStack:
     case GetStack:
+    case PhantomCreateRest:
         DFG_CRASH(m_jit.graph(), node, "Unexpected node");
         break;
     }
